tests/do/tmp/compile_03_duplicate_start_entry.stderr
error[DuplicateStartEntry]: 入口函数 _start 重复定义
 --> /._/doc/do/tests/do/cases/compile_err/03_duplicate_start_entry.do:1:1
 hint: 保留且仅保留 1 个顶层 `_start` 声明.
 1 | _start() {
   | ^
